--- a/index.html
+++ b/index.html
@@ -15,21 +15,24 @@
   <body>
     <div class="top-container">
       <h1>I'm Amy</h1>
-      <h2>a cloud computing enthusiast</h2>
-      <img
-        class="left-cloud"
-        src="./cloudIcon.png"
-        alt="cloud"
-        width="150"
-        height="90"
-      />
-      <img
-        class="right-cloud"
-        src="./cloudIcon.png"
-        alt="cloud"
-        width="150"
-        height="90"
-      />
+
+      <h2>
+        <img
+          class="left-cloud"
+          src="./cloudIcon.png"
+          alt="cloud"
+          width="150"
+          height="90"
+        />a cloud computing enthusiast
+        <img
+          class="right-cloud"
+          src="./cloudIcon.png"
+          alt="cloud"
+          width="150"
+          height="90"
+        />
+      </h2>
+
       <img class="mountain" src="./SeattleSkyline.jfif" alt="Seattle Skyline" />
     </div>
 
